Fix table tr height

--- a/itc/_static/custom.css
+++ b/itc/_static/custom.css
@@ -23,3 +23,11 @@ th {
 th p {
     color: white;
 }
+
+.table td, .table th {
+    vertical-align: middle;
+}
+
+.table p {
+    margin-bottom: 0rem;
+}
