--- a/itc/_static/custom.css
+++ b/itc/_static/custom.css
@@ -5,23 +5,24 @@
 } */
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #f5f5f5;
 }
 
-/* tr:hover {
-    background-color: #06eb0634;
-} */
+tr:hover {
+    background-color: #dcf5f4;
+}
 
-td, th {
-    border : 2px solid #ddd;
+tr, td, th {
+    border : 0.5px solid black !important;
     text-align      : center;
 }
 
-th {
+/* th {
     background-color: #5152519d;
-}
+} */
 th p {
-    color: white;
+    color: black;
+    font-weight: bold;
 }
 
 .table td, .table th {
@@ -30,4 +31,8 @@ th p {
 
 .table p {
     margin-bottom: 0rem;
+}
+
+thead tr {
+    background-color: #f5f5f5;
 }
