--- a/itc/_static/custom.css
+++ b/itc/_static/custom.css
@@ -8,8 +8,8 @@ tr:nth-child(even) {
     background-color: #f5f5f5;
 }
 
-tr:hover {
-    background-color: #dcf5f4;
+tbody tr:hover {
+    background-color: #e6e8fc;
 }
 
 tr, td, th {
@@ -21,7 +21,7 @@ tr, td, th {
     background-color: #5152519d;
 } */
 th p {
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
@@ -34,5 +34,5 @@ th p {
 }
 
 thead tr {
-    background-color: #f5f5f5;
+    background-color: #838383;
 }
